--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint-config-airbnb-typescript": "^18.0.0",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
