--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
+    "framer-motion": "^11.11.10",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
