--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13"
   },
@@ -36,5 +37,9 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-order": "^6.0.4",
     "typescript": "^5.5.3"
+  },
+  "engines": {
+    "node": "^20.16.0",
+    "npm": "^10.8.1"
   }
 }
